[tool.poetry]
name = "dz-11"
version = "0.1.0"
description = ""
authors = ["sergeyTurenko123 <sergej_petrovich_8484@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
